detail page profile

--- a/forum/views/detail.ejs
+++ b/forum/views/detail.ejs
@@ -21,7 +21,7 @@
             <div class="container">
                 <div class="detail-bg shadow">
                     <div class="content-container">
-                        <img src="<%= user.profileImg %>" style="margin-right: 10px; width : 50px">
+                        <img src="<%= result4.profileImg %>" style="margin-right: 10px; width : 50px;">
                         <div>
                             <strong><%= result.writer %></strong>
                             <div class="date-box">
