간단한 수정

--- a/forum/views/list.ejs
+++ b/forum/views/list.ejs
@@ -59,8 +59,8 @@
                     <% } %>
 
                         <div class="prev-next">
-                            <a class="none-a" href="/list/prev/<%= 글목록[0]._id %>">이전</a>
-                            <a class="none-a" href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+                            <a class="none-a" href="/list/prev/<%= 글목록[0]._id %>"> < - 이전</a>
+                            <a class="none-a" href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음 - ></a>
                         </div>
 
             </div>
