--- a/forum/public/main.css
+++ b/forum/public/main.css
@@ -3,7 +3,12 @@
   src: url('나눔손글씨 성실체.ttf');
 }
 
-
+.nav-title{
+  font-size: 1.8rem;
+  text-decoration: none;
+  color: black;
+  padding-left: 5px;
+}
 .grey-bg {
   font-family: '나눔손글씨', 'gulim', 'gothic';
 
@@ -18,7 +23,7 @@ h2,
 h1,
 span {
   transform: rotate(0.02deg);
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 .main-logo {
@@ -268,6 +273,11 @@ div {
 
 .prev-next {
   padding: 50px;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.prev-next a{
+  padding:5px;
 }
 
 .like-box {
@@ -311,7 +321,6 @@ div {
 }
 
 .re-reply-content p {
-  font-size: 14px;
   margin: 3px;
 }
 
