--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg shadow">
         <div class="container-fluid">
             
-            <a class="navbar-brand" href="/list/1">
+            <a class="nav-title" href="/list/1">
                 한상갤
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
